[gd_scene load_steps=12 format=3 uid="uid://crrb8pd5fdrp4"]

[ext_resource type="Script" path="res://GameController.gd" id="1_61weh"]
[ext_resource type="Script" path="res://Audio Controller.gd" id="1_jtjcn"]
[ext_resource type="Script" path="res://Clock.gd" id="2_kakbt"]
[ext_resource type="AudioStream" uid="uid://cigyx5u5dqiyq" path="res://Assets/TestAudio.wav" id="2_pjbmj"]
[ext_resource type="Script" path="res://Actions.gd" id="3_aqjdg"]
[ext_resource type="Script" path="res://Character.gd" id="3_o7a42"]
[ext_resource type="Texture2D" uid="uid://ea8a3ckdjpp2" path="res://Assets/RTEVaPZh_400x400.jpg" id="4_75rfu"]
[ext_resource type="Script" path="res://CharacterPing.gd" id="5_1bmgd"]
[ext_resource type="Script" path="res://EffectsPlayer.gd" id="9_3vj8r"]
[ext_resource type="Script" path="res://ObjectiveTracker.gd" id="9_4ck7d"]

[sub_resource type="Theme" id="Theme_ks27t"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_61weh")

[node name="Clock" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource("2_kakbt")

[node name="Waveform" type="Panel" parent="."]
offset_left = 9.0
offset_top = 11.0
offset_right = 1141.0
offset_bottom = 96.0
metadata/_edit_use_anchors_ = true

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pjbmj")

[node name="Actions" type="Panel" parent="."]
offset_left = 781.0
offset_top = 104.0
offset_right = 1135.0
offset_bottom = 637.0
script = ExtResource("3_aqjdg")
metadata/_edit_use_anchors_ = true

[node name="Environment" type="Node" parent="Actions"]

[node name="PingAll" type="Button" parent="Actions/Environment"]
offset_left = 794.0
offset_top = 178.0
offset_right = 1123.0
offset_bottom = 232.0
text = "Agitate all subjects"
metadata/_edit_use_anchors_ = true

[node name="Power" type="Node" parent="Actions/Environment"]

[node name="PowerOn" type="Button" parent="Actions/Environment/Power"]
offset_left = 793.0
offset_top = 114.0
offset_right = 1125.0
offset_bottom = 167.0
text = "Power On"
metadata/_edit_use_anchors_ = true

[node name="PowerOff" type="Button" parent="Actions/Environment/Power"]
offset_left = 793.0
offset_top = 114.0
offset_right = 1125.0
offset_bottom = 167.0
text = "Power Off"
metadata/_edit_use_anchors_ = true

[node name="Char1Ping" type="Node" parent="Actions/Environment"]
script = ExtResource("5_1bmgd")

[node name="PingType" type="CheckButton" parent="Actions/Environment/Char1Ping"]
offset_left = 801.0
offset_top = 242.0
offset_right = 889.0
offset_bottom = 275.0
text = "Calm"
metadata/_edit_use_anchors_ = true

[node name="PingTrigger" type="Button" parent="Actions/Environment/Char1Ping"]
offset_left = 799.0
offset_top = 273.0
offset_right = 893.0
offset_bottom = 360.0
text = "Ping
subject
1"
metadata/_edit_use_anchors_ = true

[node name="Char2Ping" type="Node" parent="Actions/Environment"]
script = ExtResource("5_1bmgd")

[node name="PingType" type="CheckButton" parent="Actions/Environment/Char2Ping"]
offset_left = 915.0
offset_top = 243.0
offset_right = 1003.0
offset_bottom = 276.0
text = "Calm"
metadata/_edit_use_anchors_ = true

[node name="PingTrigger" type="Button" parent="Actions/Environment/Char2Ping"]
offset_left = 913.0
offset_top = 274.0
offset_right = 1007.0
offset_bottom = 361.0
text = "Ping
subject
2"
metadata/_edit_use_anchors_ = true

[node name="Char3Ping" type="Node" parent="Actions/Environment"]
script = ExtResource("5_1bmgd")

[node name="PingType" type="CheckButton" parent="Actions/Environment/Char3Ping"]
offset_left = 1028.0
offset_top = 243.0
offset_right = 1116.0
offset_bottom = 276.0
text = "Calm"
metadata/_edit_use_anchors_ = true

[node name="PingTrigger" type="Button" parent="Actions/Environment/Char3Ping"]
offset_left = 1026.0
offset_top = 274.0
offset_right = 1120.0
offset_bottom = 361.0
text = "Ping
subject
3"
metadata/_edit_use_anchors_ = true

[node name="Monster" type="Node" parent="Actions"]

[node name="Agitate1" type="Button" parent="Actions/Monster"]
offset_left = 799.0
offset_top = 373.0
offset_right = 1030.0
offset_bottom = 426.0
text = "Shock Anomaly lvl 1"
metadata/_edit_use_anchors_ = true

[node name="Agitate2" type="Button" parent="Actions/Monster"]
offset_left = 799.0
offset_top = 432.0
offset_right = 1030.0
offset_bottom = 485.0
text = "Shock Anomaly lvl 2"
metadata/_edit_use_anchors_ = true

[node name="Agitate3" type="Button" parent="Actions/Monster"]
offset_left = 799.0
offset_top = 490.0
offset_right = 1030.0
offset_bottom = 543.0
text = "Shock Anomaly lvl 3"
metadata/_edit_use_anchors_ = true

[node name="Calm" type="Button" parent="Actions/Monster"]
offset_left = 1037.0
offset_top = 374.0
offset_right = 1116.0
offset_bottom = 544.0
text = "Calm
Anomaly"
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Actions/Monster"]
wait_time = 5.0

[node name="Execute" type="Button" parent="Actions"]
layout_mode = 0
offset_left = 10.0
offset_top = 450.0
offset_right = 340.0
offset_bottom = 516.0
theme = SubResource("Theme_ks27t")
text = "Execute"
metadata/_edit_use_anchors_ = true

[node name="ResetClock" type="Timer" parent="Actions"]
wait_time = 2.0

[node name="Audio Controller" type="Panel" parent="."]
visible = false
offset_left = 406.0
offset_top = 16.0
offset_right = 678.0
offset_bottom = 83.0
script = ExtResource("1_jtjcn")

[node name="Play" type="Button" parent="Audio Controller"]
layout_mode = 0
offset_left = 17.0
offset_top = 9.0
offset_right = 69.0
offset_bottom = 56.0
text = "Play"

[node name="Pause" type="Button" parent="Audio Controller"]
layout_mode = 0
offset_left = 102.0
offset_top = 9.0
offset_right = 157.0
offset_bottom = 56.0
text = "Pause"

[node name="Restart" type="Button" parent="Audio Controller"]
layout_mode = 0
offset_left = 189.0
offset_top = 10.0
offset_right = 254.0
offset_bottom = 57.0
text = "Restart"

[node name="HealthMonitor" type="Panel" parent="."]
offset_left = 279.0
offset_top = 104.0
offset_right = 771.0
offset_bottom = 633.0
metadata/_edit_use_anchors_ = true

[node name="Character1" type="Panel" parent="HealthMonitor"]
layout_mode = 0
offset_left = 15.0
offset_top = 19.0
offset_right = 476.0
offset_bottom = 117.0
script = ExtResource("3_o7a42")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="HealthMonitor/Character1"]
position = Vector2(49, 49)
scale = Vector2(0.2025, 0.19)
texture = ExtResource("4_75rfu")

[node name="Status" type="Panel" parent="HealthMonitor/Character1"]
layout_mode = 0
offset_left = 102.0
offset_top = 14.0
offset_right = 440.0
offset_bottom = 83.0
metadata/_edit_use_anchors_ = true

[node name="Character2" type="Panel" parent="HealthMonitor"]
layout_mode = 0
offset_left = 15.0
offset_top = 123.0
offset_right = 476.0
offset_bottom = 221.0
script = ExtResource("3_o7a42")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="HealthMonitor/Character2"]
position = Vector2(49, 49)
scale = Vector2(0.2025, 0.19)
texture = ExtResource("4_75rfu")

[node name="Status" type="Panel" parent="HealthMonitor/Character2"]
layout_mode = 0
offset_left = 102.0
offset_top = 14.0
offset_right = 440.0
offset_bottom = 83.0
metadata/_edit_use_anchors_ = true

[node name="Character3" type="Panel" parent="HealthMonitor"]
layout_mode = 0
offset_left = 15.0
offset_top = 228.0
offset_right = 476.0
offset_bottom = 326.0
script = ExtResource("3_o7a42")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="HealthMonitor/Character3"]
position = Vector2(49, 49)
scale = Vector2(0.2025, 0.19)
texture = ExtResource("4_75rfu")

[node name="Status" type="Panel" parent="HealthMonitor/Character3"]
layout_mode = 0
offset_left = 102.0
offset_top = 14.0
offset_right = 440.0
offset_bottom = 83.0
metadata/_edit_use_anchors_ = true

[node name="Monster" type="Panel" parent="HealthMonitor"]
layout_mode = 0
offset_left = 15.0
offset_top = 338.0
offset_right = 476.0
offset_bottom = 515.0
script = ExtResource("3_o7a42")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="HealthMonitor/Monster"]
position = Vector2(48, 82)
scale = Vector2(0.2025, 0.19)
texture = ExtResource("4_75rfu")

[node name="Status" type="Panel" parent="HealthMonitor/Monster"]
layout_mode = 0
offset_left = 102.0
offset_top = 14.0
offset_right = 445.0
offset_bottom = 163.0
metadata/_edit_use_anchors_ = true

[node name="CaseNo" type="Panel" parent="."]
offset_left = 7.0
offset_top = 556.0
offset_right = 274.0
offset_bottom = 633.0
metadata/_edit_use_anchors_ = true

[node name="GameState" type="Panel" parent="."]
offset_left = 8.0
offset_top = 225.0
offset_right = 275.0
offset_bottom = 546.0
script = ExtResource("9_4ck7d")

[node name="Score" type="Label" parent="GameState"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00749064
anchor_top = 1.01869
anchor_right = -0.00749064
anchor_bottom = 1.01869
offset_left = 23.0
offset_top = 11.0
offset_right = 243.0
offset_bottom = 70.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Objective" type="Label" parent="GameState"]
layout_mode = 0
offset_left = 21.0
offset_top = 11.0
offset_right = 240.0
offset_bottom = 50.0
text = "Current Objective:"

[node name="CurrObj" type="Label" parent="GameState"]
layout_mode = 0
offset_left = 25.0
offset_top = 44.0
offset_right = 214.0
offset_bottom = 109.0

[node name="Extra" type="Panel" parent="."]
offset_left = 9.0
offset_top = 108.0
offset_right = 274.0
offset_bottom = 217.0

[node name="Sounds" type="Node" parent="."]

[node name="EffectsPlayer" type="AudioStreamPlayer2D" parent="Sounds"]
script = ExtResource("9_3vj8r")

[node name="GameOver" type="Panel" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 1135.0
offset_bottom = 640.0

[node name="Text" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 397.0
offset_top = 173.0
offset_right = 714.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 60
text = "Game over"

[node name="ColorRect" type="ColorRect" parent="GameOver"]
layout_mode = 0
offset_left = 428.0
offset_top = 376.0
offset_right = 662.0
offset_bottom = 461.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 425.0
offset_top = 375.0
offset_right = 670.0
offset_bottom = 471.0
text = "back to menu"

[connection signal="timeout" from="Clock" to="Clock" method="_on_timer_timeout"]
[connection signal="pressed" from="Actions/Environment/PingAll" to="Actions" method="_on_AllCharTrigger_pressed"]
[connection signal="pressed" from="Actions/Environment/Power/PowerOn" to="Actions" method="_on_PowerOn_pressed"]
[connection signal="pressed" from="Actions/Environment/Power/PowerOff" to="Actions" method="_on_PowerOff_pressed"]
[connection signal="toggled" from="Actions/Environment/Char1Ping/PingType" to="Actions/Environment/Char1Ping" method="_on_check_button_toggled"]
[connection signal="pressed" from="Actions/Environment/Char1Ping/PingTrigger" to="Actions" method="_on_Char1Trigger_pressed"]
[connection signal="toggled" from="Actions/Environment/Char2Ping/PingType" to="Actions/Environment/Char2Ping" method="_on_check_button_toggled"]
[connection signal="pressed" from="Actions/Environment/Char2Ping/PingTrigger" to="Actions" method="_on_Char2Trigger_pressed"]
[connection signal="toggled" from="Actions/Environment/Char3Ping/PingType" to="Actions/Environment/Char3Ping" method="_on_check_button_toggled"]
[connection signal="pressed" from="Actions/Environment/Char3Ping/PingTrigger" to="Actions" method="_on_Char3Trigger_pressed"]
[connection signal="pressed" from="Actions/Monster/Agitate1" to="Actions" method="_on_Agitate1_pressed"]
[connection signal="pressed" from="Actions/Monster/Agitate2" to="Actions" method="_on_Agitate2_pressed"]
[connection signal="pressed" from="Actions/Monster/Agitate3" to="Actions" method="_on_Agitate3_pressed"]
[connection signal="pressed" from="Actions/Monster/Calm" to="Actions" method="_on_Calm_pressed"]
[connection signal="timeout" from="Actions/Monster/Timer" to="Actions" method="On_Calm_Timeout"]
[connection signal="pressed" from="Actions/Execute" to="Actions" method="_on_execute_button_pressed"]
[connection signal="timeout" from="Actions/ResetClock" to="Actions" method="_on_clock_timeout"]
[connection signal="pressed" from="Audio Controller/Play" to="Audio Controller" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Audio Controller/Pause" to="Audio Controller" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Audio Controller/Restart" to="Audio Controller" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOver/Button" to="." method="BackToMenu"]
